[project]
name = "ai-news-agent"
version = "0.1.0"
description = "LangGraph automation for AI news curation, Facebook post drafting, and Telegram approval."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "fastapi>=0.124.0",
  "httpx>=0.27.2",
  "langgraph>=0.2.60",
  "openai>=1.59.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "python-dateutil>=2.9.0.post0",
  "tenacity>=9.0.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
ai-news-agent = "ai_news_agent.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
